[FIX] clientSwitch icon flickering

--- a/app/css/ama.css
+++ b/app/css/ama.css
@@ -8395,7 +8395,7 @@ a {
 
 .clientSwitch {
   display: block;
-  width: 19px;
+  width: 20px;
   height: 19px;
   border-radius: 1px;
   overflow: hidden; }
